<resources>
    <string name="app_name" translatable="false">Student Calendar</string>

    <string name="welcome_1">Welcome to my app!</string>
    <string name="welcome_2">Good morning!</string>
    <string name="welcome_3">Have a nice day!</string>
    <string name="welcome_4">Organise your day</string>
    <string name="welcome_5">Hello, bonjour, hola!</string>
    <string name="welcome_6">It\'s Student Calendar!</string>
    <string name="welcome_7">Surprise!</string>

    <string name="your_day">Your day</string>
    <string name="tasks">Tasks</string>
    <string name="tests">Tests</string>
    <string name="schedules">Schedules</string>
    <string name="courses">Courses</string>
    <string name="people">People</string>

    <string name="new_task">New task</string>
    <string name="new_test">New test</string>
    <string name="new_schedule">New schedule</string>
    <string name="new_course">New course</string>
    <string name="new_person">New person</string>

    <string name="update_task">Update task</string>
    <string name="update_test">Update test</string>
    <string name="update_schedule">Update schedule</string>
    <string name="update_course">Update course</string>
    <string name="update_person">Update person</string>

    <string name="main_screen">Main screen</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="about_text">
        Student Calendar is an application designed especially for university students.\n\n
        This tool is an open source project - you can visit a github page provided below to see the code!\n
        https://github.com/maximax579/StudentCalendar\n\n
        The app was build with AppIntro library:\n
        https://github.com/AppIntro/AppIntro\n\n
        Copyright &#169; 2020, Maksymilian Wojnar
    </string>

    <string name="show_welcome_text">Show welcome screen every time you open the application</string>
    <string name="welcome_screen">Welcome screen</string>
    <string name="select_theme">Dark theme</string>
    <string name="select_theme_text">Switch on - dark theme, switch off - light theme</string>
    <string name="import_data">Import</string>
    <string name="import_data_text">Import application data from file</string>
    <string name="export_data">Export</string>
    <string name="export_data_text">Export application data to file</string>
    <string name="welcome_again">Welcome again!</string>
    <string name="choose_directory">Choose directory</string>
    <string name="choose_file">Choose file</string>
    <string name="not_supported">This action is not supported on your system</string>
    <string name="export_failed">Exporting data failed</string>
    <string name="export_completed">Exporting data complete</string>
    <string name="import_failed">Importing data failed</string>
    <string name="import_completed">Importing data complete</string>
    <string name="grant_access">You have to grant access to external storage to use this function</string>

    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>

    <string name="brown">Brown</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="sea">Sea</string>
    <string name="cyan">Cyan</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="maroon">Maroon</string>
    <string name="steel">Steel</string>
    <string name="gray">Gray</string>

    <string name="beach">Beach</string>
    <string name="tea">Tea</string>
    <string name="cafe">Cafe</string>
    <string name="smile">Smile</string>
    <string name="music">Music</string>
    <string name="thumb_up">Thumb up</string>
    <string name="sun">Sun</string>
    <string name="airplane">Airplane</string>
    <string name="android">Android</string>
    <string name="cake">Cake</string>
    <string name="camera">Camera</string>
    <string name="message">Message</string>
    <string name="laptop">Laptop</string>
    <string name="leaf">Leaf</string>
    <string name="notes">Notes</string>

    <string name="lecture">Lecture</string>
    <string name="classes">Classes</string>
    <string name="laboratories">Laboratories</string>
    <string name="internship">Internship</string>
    <string name="other">Other</string>

    <string name="exam">Exam</string>
    <string name="test">Test</string>
    <string name="short_test">Short test</string>

    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>

    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="fifteen_min">15 min</string>
    <string name="thirty_min">30 min</string>
    <string name="one_h">1 hour</string>
    <string name="two_h">2 hours</string>
    <string name="twelve_h">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="two_days">2 days</string>
    <string name="one_week">1 week</string>
    <string name="at_the_time">At the time</string>
    <string name="none">None</string>
    <string name="reminder_in_the_past">*Reminder cannot be set in the past</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="office">Office</string>
    <string name="information">More information</string>
    <string name="type">Type</string>
    <string name="when">When</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="location">Location</string>
    <string name="course">Course</string>
    <string name="priority">Priority</string>
    <string name="reminder">Reminder</string>
    <string name="person">Person</string>
    <string name="date_time" translatable="false">%1$s %2$s</string>
    <string name="subject">Subject</string>
    <string name="required">*Required</string>
    <string name="delete">Delete</string>
    <string name="day_of_week">Day of week</string>
    <string name="start_end_text">From %1$s to %2$s</string>

    <string name="start_tutorial">Start tutorial</string>
    <string name="introduction_1">Welcome to Student Calendar! Here is a quick tutorial on how to use my app, let me
        show you!
    </string>
    <string name="first_steps">First steps</string>
    <string name="first_steps_text_2">To start use this app, you have to add some basic information, so we can start
        organising your time.
    </string>
    <string name="first_steps_text_3">Firstly, you have to add some courses that you attend (tab \"Courses\" and \"+\"
        button)…
    </string>
    <string name="first_steps_text_4">…and academic teachers that are responsible for that courses (tab \"People\").
    </string>
    <string name="setup_your_day">Setup your day</string>
    <string name="setup_your_day_5">Now you can setup your schedules, add tests and exams - we will show all of that on
        \"Your day\" page.
    </string>
    <string name="setup_your_day_6">You can also add some important tasks and set a reminders - all you have to do will
        be shown on \"Your day\" page.
    </string>
    <string name="settings_7">Take a look at the settings page! You can turn on and off welcome screen or switch between
        light and dark theme.
    </string>
    <string name="widget_8">Maybe you would like to add a widget to your home screen?</string>
    <string name="text_9">That\' all! I hope that you will enjoy using my app, so let\'s begin!</string>
    <string name="widget">Widget</string>
    <string name="reminders_channel_name">Reminders</string>
    <string name="reminders_channel_description">Tasks reminder from Student Calendar</string>
    <string name="remind_in_15_min">REMIND IN 15 MIN</string>

    <string name="application_icon">Application icon</string>
    <string name="random_welcome_icon">Random welcome icon</string>
    <string name="course_icon">Course icon</string>
    <string name="go_to_app_button">Go to app button</string>

    <string name="random_welcome_text_name" translatable="false">random_welcome_text_name</string>
    <string name="random_welcome_color_name" translatable="false">random_welcome_color_name</string>
    <string name="show_welcome_preference" translatable="false">show_welcome_preference</string>
    <string name="theme_preference" translatable="false">theme_preference</string>
    <string name="show_intro" translatable="false">show_intro</string>
    <string name="reminders_channel_id" translatable="false">student_calendar_reminders_channel</string>
    <string name="notification_id" translatable="false">notification_id</string>
    <string name="notification_message" translatable="false">notification_message</string>
    <string name="selected_tab" translatable="false">selected_tab</string>
    <string name="type_drawable" translatable="false">drawable</string>
    <string name="type_color" translatable="false">color</string>
    <string name="type_string" translatable="false">string</string>
    <string name="export_preference" translatable="false">export_preference</string>
    <string name="import_preference" translatable="false">import_preference</string>
</resources>