<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/show_welcome_preference"
        android:title="@string/welcome_screen"
        android:summary="@string/show_welcome_text" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/theme_preference"
        android:title="@string/select_theme"
        android:summary="@string/select_theme_text"/>
    <Preference
        android:icon="@drawable/ic_baseline_import_24"
        android:key="@string/import_preference"
        android:title="@string/import_data"
        android:summary="@string/import_data_text" />
    <Preference
        android:icon="@drawable/ic_baseline_export_24"
        android:key="@string/export_preference"
        android:title="@string/export_data"
        android:summary="@string/export_data_text"/>
</androidx.preference.PreferenceScreen>