<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".about.AboutFragment">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_icon_size"
                android:layout_marginTop="@dimen/margin_big"
                android:contentDescription="@string/application_icon"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                style="@style/TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/app_name"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_big"
                android:text="@string/about_text"
                android:textAlignment="center"
                android:textSize="@dimen/about_text" />
        </LinearLayout>
    </ScrollView>
</layout>